2001-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in, aclocal.m4, configure.in, install-sh, w3mhack.el:
	New files.
	* Makefile: Removed.

2001-03-14  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Split file.

	* w3m-form.el: New file.

2001-03-14  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-xmas.el (w3m-insert-image): Don't use current cursor point
	to make a new extent.

	* w3m.el (w3m-region): Call `sit-for' to redisplay before image
	display.
	(w3m-goto-url): Ditto.
	(w3m-exec-process): Use `sleep-for' instead of `sit-for'.
	(w3m-toggle-inline-images): Set cursor point before image insertion.
	(w3m-goto-url): Set cursor point before redisplay.

2001-03-14  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-read-passwd): Removed.
	(w3m-exec-filter): Use `read-passwd' instead of `w3m-read-passwd'.

	* w3m-om.el (read-passwd): Added.

2001-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-om.el: Rewrite to insert "-" into the name of eol-type
	variants of each newly generated coding-system.

2001-03-14  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Split files.
	(w3m-coding-system): Changed customize type.
	(w3m-input-coding-system): Ditto.
	(w3m-output-coding-system): Ditto.
	(w3m-bookmark-file-coding-system): Ditto.
	(w3m-url-encode-string): Removed redundant code for Mule-2.

	* w3m-e21.el: New file.

	* w3m-xmas.el: New file.

	* w3m-om.el: New file.

	* w3m-search.el (w3m-search-default-coding-system): Changed
	customize type.
	(w3m-search-engine-alist): Ditto.

	* w3m-weather.el: Fix comments.

2001-03-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Use the copy of info-vector for newly generated coding-
	systems; use `eval-when-compile' separately from "cl" for loading
	"cl-macs".

2001-03-13  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Split files.
	* w3m-search.el: New file.
	* w3m-weather.el: New file.

2001-03-13  Katsumi Yamaoka  <yamaoka@jpl.org>
